client/src/pages/TaskView/Taskview.module.scss
@use "@/styles/variables" as v;
$base-size: 1.2em;

.checkbox {
  width: $base-size;
  height: $base-size;
  border: 2px solid var(--primary-color);
  border-radius: $base-size;

  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;

  &.checked {
    background-color: var(--primary-color);
    color: var(--on-primary-color);
  }
}

.loadingIndicatorContainer {
  text-align: center;
  box-sizing: border-box;
  padding: 7.8px; // + 1.6 * rows (6)  / 2
}

.tableButton {
  display: flex;
  //font-weight: bold;
  align-items: center;
  font-size: v.$font-m;
  gap: 6px;
}

.editIcons {
  font-size: v.$font-xl;
}

.table {
  height: auto;
  tr {
    td {
      width: 45%;
    }
    &:last-of-type(td) {
      width: 10%;
    }
  }
}

.tBody {
  height: auto;
}

.isProperDate {
  text-decoration: underline;
}

.emptyRow {
  & > td {
    height: 1.5em;
  }
}

.tableLoading {
  & > tr:not(:last-child) > td {
    border-bottom: none;
  }
}

